# esp32-bitcoin-clock

./: .gitignore  README.md  sdkconfig
main/: CMakeLists.txt  Kconfig.projbuild  http_client.c  http_client.h  led_module.c  led_module.h  main.c  max7219.c  max7219.h  sntp_module.c  sntp_module.h  spi_module.c  spi_module.h  wifi_module.c  wifi_module.h
